--- a/challenge/frontend/src/main/App.css
+++ b/challenge/frontend/src/main/App.css
@@ -1,4 +1,8 @@
 :root {
+    --logo-menu-height: 100px;
+    --logo-width: 225px;
+    --footer-height: 40px;
+
     --shadow:
         0 2px 23px 0 rgba(0, 0, 0, 0.1),
         0 2px 49px 0 rgba(0, 0, 0, 0.06);
@@ -7,4 +11,27 @@
 * {
     box-sizing: border-box;
     font-family: 'Fira Sans', sans-serif;
+}
+
+.app {
+    margin: 0px;
+    display: grid;
+    grid-template-columns: var(--logo-width) 1fr;
+    grid-template-rows: var(--logo-menu-height) 1fr var(--footer-height);
+    grid-template-areas:
+        "logo header"
+        "content content"
+        "footer footer";
+}
+
+aside.logo {
+    grid-area: logo;
+}
+
+header.header {
+    grid-area: header;
+}
+
+footer.footer {
+    grid-area: footer;
 }
