--- a/challenge/frontend/src/main/App.css
+++ b/challenge/frontend/src/main/App.css
@@ -1,7 +1,7 @@
 :root {
     --logo-menu-height: 100px;
     --logo-width: 225px;
-    --footer-height: 40px;
+    --footer-height: 60px;
 
     --shadow:
         0 2px 23px 0 rgba(0, 0, 0, 0.1),
@@ -22,6 +22,7 @@
         "logo header"
         "content content"
         "footer footer";
+    height: 100vh;
 }
 
 aside.logo {
