Add var color-font

--- a/challenge/frontend/src/main/App.css
+++ b/challenge/frontend/src/main/App.css
@@ -2,6 +2,7 @@
     --logo-menu-height: 80px;
     --logo-width: 225px;
     --footer-height: 60px;
+    --color-font: rgba(19, 22, 26, 0.842);
 
     --shadow:
         0 2px 23px 0 rgba(0, 0, 0, 0.1),
