--- a/challenge/frontend/src/components/template/Header.css
+++ b/challenge/frontend/src/components/template/Header.css
@@ -27,7 +27,7 @@ header nav.menu {
 }
 
 header nav.menu a {
-    color: rgba(19, 22, 26, 0.842);
+    color: var(--color-font);
     display: inline-block;
     text-decoration: none;
     font-weight: 300;
